--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,28 +1,25 @@
 {
   "name": "web",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
-  "description": "Party quiz app web front end application",
-  "author": "shogo-nakano-desu",
   "scripts": {
+    "dev": "next dev",
     "build": "yarn build:gql && yarn build:theme && yarn build:next",
+    "start": "next start",
+    "lint": "next lint",
     "build:gql": "graphql-codegen --config graphql/codegen.yml",
     "build:next": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start",
-    "test": "env-cmd -f ../../.env cross-env NODE_ENV=test jest",
-    "typecheck": "tsc --noEmit"
+    "test": "env-cmd -f ../../.env cross-env NODE_ENV=test jest"
   },
   "dependencies": {
-    "graphql": "15.8.0"
-  },
-  "devDependencies": {
-    "env-cmd": "10.1.0",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-plugin-jest": "25.3.4",
-    "jest": "29.2.1",
-    "typescript": "4.5.4"
+    "@types/node": "18.11.12",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "next": "13.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.4"
   }
 }
