--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "clean": "rm -rf ./node_modules && rm -rf ./dist",
+    "seed":"ts-node ./prisma/seed.ts" ,
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
