--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@next/font": "13.0.7",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "lodah": "^0.0.1-security",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.16.1"
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/typed-document-node": "^2.3.11",
+    "@graphql-codegen/typescript-operations": "^2.5.11",
+    "@types/lodash": "^4.14.191"
   }
 }
