--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@urql/devtools": "^2.0.3",
+    "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "graphql-tag": "^2.12.6",
