--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,12 +15,13 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "npm run setup-db && jest",
+    "test": "npm run setup-test-db && jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "npm run setup-db && jest --config ./test/jest-e2e.json",
-    "setup-db": "node src/test-utils/base-db.js"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "setup-test-db": "node src/test-utils/base-db.js",
+    "setup-db": "prisma migrate dev && prisma db seed"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
@@ -30,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
     "apollo-server-express": "^3.11.1",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
