--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,7 +21,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "setup-test-db": "node src/test-utils/base-db.js",
-    "setup-db": "prisma migrate dev"
+    "setup-db": "prisma migrate dev",
+    "reset-db": "prisma db push --accept-data-loss --schema=./prisma/reset.prisma && prisma db push --accept-data-loss && prisma db seed"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
