--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,10 +2,10 @@
   "name": "web",
   "version": "0.1.0",
   "scripts": {
-    "start:dev": "next dev",
+    "start:dev": "next dev -p 8080",
     "build": "next build",
     "build:gql": "graphql-codegen --config graphql/codegen.yml",
-    "start": "next start",
+    "start": "next start -p 8080",
     "clean": "rm -rf ./node_modules && rm -rf ./dist && rm -rf ./.next",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint": "next lint"
