feat(core): use other yarn version

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   },
   "packageManager": "yarn@1.22.19",
   "volta": {
-    "node": "16.14.0"
+    "node": "16.14.0",
+    "yarn": "1.22.11"
   },
   "workspaces": [
     "apps/*",
