--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,5 @@ nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-
-yarnPath: .yarn/releases/yarn-1.22.19.cjs
+    spec: '@yarnpkg/plugin-workspace-tools'
+# yarnPath: .yarn/releases/yarn-1.22.19.cjs
