--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start:dev": "next dev -p 8080",
     "build": "next build",
+    "build:prod": "yarn build:gql && next build",
     "build:gql": "graphql-codegen --config graphql/codegen.yml",
     "start": "next start -p 8080",
     "clean": "rm -rf ./node_modules && rm -rf ./dist && rm -rf ./.next",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.6.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "ts-node": "^10.9.1"
   }
 }
