--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ coverage
 # nyc test coverage
 .nyc_output
 
+apps/backend/prisma/prod_initial.sql
+
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
